--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "artificialmufti",
+    "name": "Artificial Mufti",
     "slug": "artificialmufti",
     "version": "1.0.0",
     "orientation": "portrait",
