--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.75.0",
     "adhan": "^4.4.3",
+    "axios": "^1.12.2",
     "expo": "~53.0.22",
     "expo-auth-session": "~6.2.1",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.2",
@@ -56,8 +58,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8",
-    "expo-crypto": "~14.1.5"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
