--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-notifications": "~0.31.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
