--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.8",
-    "expo-notifications": "~0.31.4"
+    "expo-notifications": "~0.31.4",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
