--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react-native-webview": "13.13.5",
     "zustand": "^5.0.8",
     "expo-notifications": "~0.31.4",
-    "react-native-maps": "1.20.1"
+    "react-native-maps": "1.20.1",
+    "expo-intent-launcher": "~12.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
