--- a/.github/workflows/eas-production.yml
+++ b/.github/workflows/eas-production.yml
@@ -60,7 +60,7 @@ jobs:
               "id": "test-build-id-001",
               "appVersion": "1.0.0",
               "appBuildVersion": "3", 
-              "artifacts": { "buildUrl": "https://example.com/fake.apk" }
+              "artifacts": { "buildUrl": "https://expo.dev/artifacts/eas/gvi7mJMkWcctpiX2irWbfU.apk" }
             }
           ]' > build-output.json
 
@@ -77,39 +77,23 @@ jobs:
       - name: Ensure jq (optional)
         run: jq --version || sudo apt-get update && sudo apt-get install -y jq
 
-      # - name: Bump package.json patch version (no git tag here)
-      #   id: bump
-      #   run: |
-      #     # Avoid bumping when this commit is the bump commit to prevent loop
-      #     if git log -1 --pretty=%B | grep -q "CI: version Bump"; then
-      #       echo "Skip bump (already bumped by CI)"
-      #       echo "new_version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
-      #       exit 0
-      #     fi
-      #     NEWVER=$(npm version patch --no-git-tag-version)
-      #     echo "new_version=$NEWVER" >> $GITHUB_OUTPUT
+      - name: Create metadata.json
+        run: |
+          echo "{
+            \"versionName\": \"${{ steps.eas_build.outputs.app_version }}\",
+            \"versionCode\": \"${{ steps.eas_build.outputs.app_build_version }}\",
+            \"apkUrl\": \"${{ steps.eas_build.outputs.build_url }}\",
+            \"buildId\": \"${{ steps.eas_build.outputs.build_id }}\",
+            \"publishedAt\": \"${{ github.event.head_commit.timestamp }}\"
+          }" > metadata.json
 
-      # - name: Create git commit + tag for release
-      #   run: |
-      #     git config user.name "github-actions"
-      #     git config user.email "github-actions@github.com"
-      #     git add package.json package-lock.json || true
-      #     git commit -m "CI: version Bump ${{ steps.bump.outputs.new_version }}" || echo "no changes to commit"
-      #     TAG="v${{ steps.bump.outputs.new_version }}"
-      #     git tag -a "$TAG" -m "Release $TAG"
-      #     git push origin HEAD:main
-      #     git push origin "$TAG"
-
-      - name: Create metadata.json and upload as GitHub Release
+      - name: Upload GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: "v${{ steps.eas_build.outputs.app_version }}+${{ steps.eas_build.outputs.app_build_version }}"
-          name: "Build v${{ steps.eas_build.outputs.app_version }} (${{
-            steps.eas_build.outputs.app_build_version
-          }})"
-          body: |
-            Build Completed.
-            Build ID: ${{ steps.eas_build.outputs.build_id }}
-            Artifact URL: ${{ steps.eas_build.outputs.build_url }}
+          name: "Build v${{ steps.eas_build.outputs.app_version }} (${{ steps.eas_build.outputs.app_build_version }})"
+          body: "Build Completed."
+          files: |
+            metadata.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
