--- a/.github/workflows/eas-production.yml
+++ b/.github/workflows/eas-production.yml
@@ -31,48 +31,48 @@ jobs:
       - name: Install EAS CLI
         run: npm i -g eas-cli
 
-      # - name: Run EAS Production Build and capture JSON (wait)
-      #   id: eas_build
-      #   run: |
-      #     set -o pipefail
-      #     # run build with JSON output and wait until complete
-      #     eas build --platform android --profile production --non-interactive --json --wait > build-output.json
-      #     cat build-output.json
-      #     # parse artifact URL and buildNumber using jq
-      #     BUILD_URL=$(jq -r '.[0].artifacts.buildUrl // empty' build-output.json)
-      #     BUILD_ID=$(jq -r '.[0].id // empty' build-output.json)
-
-      #     APP_VERSION=$(jq -r '.[0].appVersion' build-output.json)
-      #     APP_BUILD_VERSION=$(jq -r '.[0].appBuildVersion' build-output.json)
-
-      #     echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
-      #     echo "app_build_version=$APP_BUILD_VERSION" >> $GITHUB_OUTPUT
-
-      #     # If your build profile or EAS version uses different keys, adjust the jq path accordingly
-      #     echo "build_url=$BUILD_URL" >> $GITHUB_OUTPUT
-      #     echo "build_id=$BUILD_ID" >> $GITHUB_OUTPUT
-
-      - name: Mock EAS Output (TEST ONLY)
+      - name: Run EAS Production Build and capture JSON (wait)
         id: eas_build
         run: |
-          echo '[
-            {
-              "id": "test-build-id-001",
-              "appVersion": "1.0.0",
-              "appBuildVersion": 3, 
-              "artifacts": { "buildUrl": "https://expo.dev/artifacts/eas/gvi7mJMkWcctpiX2irWbfU.apk" }
-            }
-          ]' > build-output.json
+          set -o pipefail
+          # run build with JSON output and wait until complete
+          eas build --platform android --profile production --non-interactive --json --wait > build-output.json
+          cat build-output.json
+          # parse artifact URL and buildNumber using jq
+          BUILD_URL=$(jq -r '.[0].artifacts.buildUrl // empty' build-output.json)
+          BUILD_ID=$(jq -r '.[0].id // empty' build-output.json)
 
-          BUILD_URL=$(jq -r '.[0].artifacts.buildUrl' build-output.json)
-          BUILD_ID=$(jq -r '.[0].id' build-output.json)
           APP_VERSION=$(jq -r '.[0].appVersion' build-output.json)
           APP_BUILD_VERSION=$(jq -r '.[0].appBuildVersion' build-output.json)
 
-          echo "build_url=$BUILD_URL" >> $GITHUB_OUTPUT
-          echo "build_id=$BUILD_ID" >> $GITHUB_OUTPUT
           echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
           echo "app_build_version=$APP_BUILD_VERSION" >> $GITHUB_OUTPUT
+
+          # If your build profile or EAS version uses different keys, adjust the jq path accordingly
+          echo "build_url=$BUILD_URL" >> $GITHUB_OUTPUT
+          echo "build_id=$BUILD_ID" >> $GITHUB_OUTPUT
+
+      # - name: Mock EAS Output (TEST ONLY)
+      #   id: eas_build
+      #   run: |
+      #     echo '[
+      #       {
+      #         "id": "test-build-id-001",
+      #         "appVersion": "1.0.0",
+      #         "appBuildVersion": 3,
+      #         "artifacts": { "buildUrl": "https://expo.dev/artifacts/eas/gvi7mJMkWcctpiX2irWbfU.apk" }
+      #       }
+      #     ]' > build-output.json
+
+      #     BUILD_URL=$(jq -r '.[0].artifacts.buildUrl' build-output.json)
+      #     BUILD_ID=$(jq -r '.[0].id' build-output.json)
+      #     APP_VERSION=$(jq -r '.[0].appVersion' build-output.json)
+      #     APP_BUILD_VERSION=$(jq -r '.[0].appBuildVersion' build-output.json)
+
+      #     echo "build_url=$BUILD_URL" >> $GITHUB_OUTPUT
+      #     echo "build_id=$BUILD_ID" >> $GITHUB_OUTPUT
+      #     echo "app_version=$APP_VERSION" >> $GITHUB_OUTPUT
+      #     echo "app_build_version=$APP_BUILD_VERSION" >> $GITHUB_OUTPUT
 
       - name: Ensure jq (optional)
         run: jq --version || sudo apt-get update && sudo apt-get install -y jq
