--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@edwardloopez/react-native-coachmark": "^0.5.1",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "5",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -33,9 +34,11 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
+    "expo-intent-launcher": "~12.1.5",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.5",
     "expo-sensors": "~14.1.4",
     "expo-splash-screen": "~0.30.10",
@@ -50,6 +53,7 @@
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.18.6",
+    "react-native-maps": "1.20.1",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -60,10 +64,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8",
-    "expo-notifications": "~0.31.4",
-    "react-native-maps": "1.20.1",
-    "expo-intent-launcher": "~12.1.5"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
